--- a/trunk/docs/release-notes.txt
+++ b/trunk/docs/release-notes.txt
@@ -2,7 +2,9 @@ Obi release notes
 $Id$
 
 
-These release notes describe Obi version 0.8.0.0, released 2007-01-26.
+These release notes describe Obi version 0.8.0.0, released 2007-01-26. The
+goal of this document is to list all of the features of the latest version
+of Obi, for developers, testers and users. See appendix B for the changelog.
 
 NOTE TO TESTERS: please verify that every statement in this document is true
 with regard to the distributed version of Obi.
@@ -30,6 +32,34 @@ with regard to the distributed version of Obi.
   a star if it has unsaved modifications, and the name of the application. If
   no project is open only the name of the application is shown.
 
+  1.7 Obi stores simple metadata about projects. This metadata is used to
+  create DAISY metadata automatically on export. To view or modify the
+  metadata for a project, use Edit > Metadata (Alt+M).
+
+    1.7.1 "Title" is the title of the project. The title is chosen when
+    creating the project but can be changed at any time.
+
+    1.7.2 "Narrator" is the name of the person(s) doing the narration for
+    this project. It defaults to the user name in the user profile.
+
+    1.7.3 "Publisher" is the user's publisher. It defaults to the publisher
+    name in the user profile.
+
+    1.7.4 "Identifier" is a unique identifier for the project. It is
+    generated from the template set in the project preferences.
+
+    1.7.5 "Language" is the (main) language of the project. It defaults to
+    the user language set in the user profile. The language can be chosen
+    from a list.
+
+    1.7.6 Metadata editing is currently NOT undoable.
+
+  1.8 The project can be "touched" to simulate making a change (i.e. forcing
+  the project to be resaved.) This also forced the views to be redrawn so it
+  is useful when rendering bugs happen. The shortcut is F5, which is usually
+  used for "refresh" operations in other applications. This was initially
+  intended for debugging purposes but it should probably stay in the regular
+  version.
 
 2 The TOC panel
 
@@ -47,8 +77,8 @@ with regard to the distributed version of Obi.
   2.3 A used section shows in blue; an unused section shows is grayed-out. An
   unused section will not be exported to a DAISY book, and will not be played
   when the whole book plays.
-  <LNN>The sections look the same in the TOC when they have focus, regardless
-  of being marked as used or not. Is this a feature or a bug?</LNN>
+  [NOTE: when selected, sections appear the same whether they are used or
+  unused. This is a feature of the tree widget]
 
   2.4 A section can be selected in the TOC panel by clicking it. It shows in
   white with a blue background.
@@ -58,9 +88,7 @@ with regard to the distributed version of Obi.
 
   2.6 New sections can be created by adding a sibling section (section of the
   same level) or a child section (sub-section.)
-  <LNN>There is currently no way to insert a new section before the first child.
-  The dicussed "insert before selected node" has seemingly not been implemented?
-  </LNN>
+  [NOTE: this should change to insert before behavior.]
 
     2.6.1 Adding a sibling section (TOC > Add section, or Ctrl+A) adds a new
     section immediately after the children of the selected section with the
@@ -98,7 +126,7 @@ with regard to the distributed version of Obi.
   the section in the clipboard can be pasted as a new child of the selected
   section (Edit > Paste section, or Ctrl+V). The clipboard is unchanged, so
   that the same section can be pasted again.
-  <LNN>Also here, paste should be "insert before selected" IMO</LNN>
+  [NOTE: this should change to insert before behavior.]
 
   2.12 A selected section can be deleted (Edit > Delete section, or Del).
 
@@ -120,68 +148,187 @@ with regard to the distributed version of Obi.
 3 The strip view
 
   3.1 The strip view shows on the right-hand side of the project panel. It
-  cannot be hidden but can be resized.
-  <LNN>Only in relation to the TOC-view, right? Feels more like I'm resizing the 
-  TOC than the strips, but it is OFC both...</LNN>
+  cannot be hidden but can be resized with regards to the TOC view using the
+  narrow strip between the TOC view and the strip view.
 
-  3.2 Section strips and audio blocks
+  3.2 The strip view shows the full contents of the project in a flat way,
+  i.e. sections are not indented to show hierarchy but remain flat as this
+  is how the contents will be presented to the readers later.
 
-    3.2.1 Section strips
+    3.2.1 Section strips are containers for every section in the project.
+    There is a one-to-one correspondance between strips and sections. A
+    strip has a name which is the same as the section title; changing one
+    automatically changes the other. A section strip can be empty (it has no
+    content) or contain one or more audio blocks.
 
-    3.2.2 Audio block
+    3.2.2 Audio blocks are units of audio that are arranged in a section
+    strip. A block represents a phrase in the book, in the sense of local
+    navigation (i.e. navigation by phrase.) Blocks are aligned inside a
+    section strip. They will play in the order that they are arranged in.
+    Audio blocks are unnamed (they all say "Audio") and display the length
+    of the phrase that they correspond to in seconds.
 
-    3.2.3 Annotation
+    3.2.3 Annotations are (short) text annotations that can be associated
+    with phrases at production time (they are not exported to the DAISY book
+    but are saved in the project) such as "Fix this" or "Zaboom!"
+    Annotations are represented in parallel with audio blocks; vertical
+    alignment shows which block they belong to.
 
-    3.2.4 Page number
+    3.2.4 Page numbers can be set on audio blocks to mark pages in the DAISY
+    book. They are displayed in the audio block on which they are set.
 
-  3.3 Selection
+  3.3 Strips and blocks can be selected in the strip view.
 
-  3.4 Operations on strips
+    3.3.1 Annotations are not selectable, only the block that they are
+    aligned with. Page numbers are not selectable either.
 
-    3.4.1 Add strip
+    3.3.2 Selecting an item in the strip view deselects any selected item in
+    the TOC view, or any previously selected item in the strip view.
 
-    3.4.2 Rename strip
+    3.3.3 An item can be selected by clicking it, i.e. inside a section
+    strip (but outside of a block) or inside an audio block. Selection can
+    change with the transport bar as well (see below.)
 
-    3.4.3 Cut strip
+    3.3.4 Contrary to the TOC view, selecting a strip selects only the
+    corresponding section and no subsection. See "delete strip" below for
+    further effects.
 
-    3.4.4 Copy strip
+    3.3.5 Clicking outside strips deselects everything.
 
-    3.4.5 Paste strip
+  3.4 Operations on section strips
 
-    3.4.6 Delete strip
+    3.4.1 Add strip (Ctrl+A) adds a new strip. The new strip corresponds to
+    a new section in the TOC; it is the first sibling of the section
+    corresponding to the selected strip. When the strip is added, its title
+    is selected and can be immediately edited (see rename strip below.)
 
-    3.4.7 Show in TOC view
+    3.4.2 Rename strip (F2) allows to change the title of the selected strip
+    and of its corresponding section. See "rename section".
+
+    3.4.3 Cut strip (Ctrl+X) deletes the selected strip and places it in the
+    clipboard. See the note about deleting strips below.
+
+    3.4.4 Copy strip (Ctrl+C) places the selected strip in the clipboard.
+
+    3.4.5 Paste strip (Ctrl+V) pastes the strip in the clipboard as the last
+    child of the section corresponding to the selected strip, or as the last
+    top-level section if nothing is selected.
+
+    3.4.6 Delete strip (Del) deletes the selected strip and the
+    corresponding section. Child sections are not deleted and are reattached
+    as children of the deleted section's parent.
+
+    3.4.7 Show in TOC view (Alt+V) selects the selected strip's section in
+    the TOC view.
 
     [NOTE: Mark strip as used/unused will be removed in the next release;
     please ignore this item.]
 
   3.5 Operations on audio blocks
 
-    3.5.1 Import audio file
+    3.5.1 Import audio file (Ctrl+I) lets the use select an audio file
+    (currently only the uncompressed RIFF/WAVE format is supported, usually
+    these files are named with a .wav extension) and create a phrase from
+    it. The phrase is inserted before the selected block or at the end of
+    the selected strip. For convenience, several files can be selected at
+    one, and as many blocks are created.
 
-    3.5.2 Insert empty audio block
+    3.5.2 Split audio block (Ctrl+P) splits the currently selected audio
+    block in two blocks. This command brings up the split dialog whose
+    function is to determine where the split point occurs. When the dialog
+    is closed by pressing "split", a new block is added after the original
+    block with the audio from the split point, while the original block's
+    audio now only contains audio up to the split point.
 
-    3.5.3 Split audio block
+      3.5.2.1 The "play" button plays the audio so that the split point can
+      be determined. When playing, the button becomes "pause". Pausing
+      playback then sets the split point to the point where paused occurred.
 
-    3.5.4 Quick split audio block
+      3.5.2.2 The "preview" button plays the audio for 3 seconds from the
+      split time without changing it, in order to preview how the split
+      phrase will begin. When previewing, the button becomes "back" which
+      restarts previewing from the split time; the "play" button also
+      becomes "pause" which allows to modify the split as described above.
 
-    3.5.5 Apply phrase detection
+      3.5.2.3 The split time can be edited to be set manually.
 
-    3.5.6 Merge with next audio block
+      3.5.2.4 The navigate box allows to rewind and forward while playing in
+      order to find the split point in a long phrase or fine tune the split
+      position. The step size in seconds text box can be modified with the +
+      and - buttons to change the step from a small to larger increments.
 
-    3.5.7 Move audio block forward/backward
+      3.5.2.5 When the split time has been chosen, press "split" to
+      actually split the phrase. Pressing this button while playing will
+      split at the playing time.
 
-    3.5.8 Cut audio block
+      3.5.2.6 Splitting can be cancelled by pressing the "stop/close"
+      button.
 
-    3.5.9 Copy audio block
+    [NOTE: the split dialog needs a makeover]
 
-    3.5.10 Paste audio block
+    3.5.3 Quick split audio block (Ctrl+Shift+P) splits the currently
+    selected audio block in two blocks without going through the split
+    dialog. The split point is determined from the current playing time or
+    paused time.
 
-    3.5.11 Delete audio block
+    3.5.4 Apply phrase detection (Ctrl+H) splits the selected audio block
+    into as many phrases as it contains. There are three parameters to
+    phrase detection:
 
-    3.5.12 Mark audio block as used/unused
+      3.5.4.1 Silence threshold sets the noise level in the audio. This
+      value is computed automatically from a reference silence file which
+      should be recorded in the same conditions as the audio to apply
+      sentence detection on. At this point, the silent asset must be the
+      first audio block in the project (it is useful to mark it as unused to
+      not have leading silence in the book.) The value can be modified if
+      the results are unsatisfactory.
+
+      3.5.4.2 Gap between sentences sets the minimum amount in milliseconds
+      for a stretch of silence to be considered a gap between sentences. The
+      default value is 500ms (half a second.)
+
+      3.5.4.3 Leading silence is the amoun in milliseconds of silence that
+      should be kept at the beginning of every phrase. The default value is
+      100ms. The rest of the gap stays as trailing silence in the previous
+      phrase.
+
+    Note that sentence detection can take a bit of time so please be
+    patient.
+
+    3.5.5 Merge with next audio block (Ctrl+M) merges the selected audio
+    block with the next one in the strip. The audio from the two blocks is
+    concatenated together.
+
+    3.5.6 Move audio block backward (Ctrl+Right) or forward (Ctrl+Left)
+    moves the selected audio block in the corresponding direction inside the
+    strip (i.e. switch place with the previous or next one.)
+
+    3.5.7 Cut audio block (Ctrl+X) deletes the selected audio block and
+    places it in the clipboard.
+
+    3.5.8 Copy audio block (Ctrl+C) places the selected audio block in the
+    clipboard.
+
+    3.5.9 Paste audio block (Ctrl+V) pastes the audio block in the clipboard
+    before the selected audio block, or at the end of the selected strip.
+
+    3.5.10 Delete audio block (Del) deletes the selected audio block from
+    its strip.
+
+    3.5.11 Mark audio block as used/unused (Ctrl+K) toggles the used state
+    of the selected audio block (gray is unused, pink is used.) Unused
+    blocks will not play when playing back the whole project.
+
+    [NOTE: Insert empty audio block will be removed in the next release;
+    please ignore this item.]
 
   3.6 Operations on annotations
+
+    3.6.1 Edit annotation (F2) adds or modifies the annotation for an audio
+    block (displayed in the blue block above.)
+
+    3.6.2 Remove annotation (Ctrl+Shift+Del) removes the annotation on the
+    block.
 
   3.7 Pages are broken and must be fixed soon. Page numbers will be set
   automatically; page numbering will start from 1 and increase by 1 for every
@@ -193,14 +340,135 @@ with regard to the distributed version of Obi.
 
 4 The transport bar and VU meter; playing and recording audio
 
+ 4.1 The transport bar is shown in the bottom of the window when a project
+ is open. It is used to play, record and navigate in the audio of the book.
+
+ 4.2 The transport bar has buttons controlling playback and recording.
+
+   4.2.1 The previous section button
+   
+   4.2.2 The previous phrase button
+
+   4.2.3 The rewind button
+
+   4.2.4 The play/pause button
+
+   4.2.5 The record button
+
+   4.2.6 The stop button
+
+   4.2.7 The fast forward button
+
+   4.2.8 The next phrase button
+
+   4.2.9 The next section button
+
+ 4.3 The transport bar displays the current time in playback. It has four
+ different modes. In "elapsed" mode, the timer increases every second; in
+ "remaining" modes it decreases. The value display is always positive or
+ zero. The format of the display is "hh:mm:ss" (hours, minutes and seconds.)
+
+   4.3.1 "elapsed" shows the elapsed time in the current phrase. Every time
+   a new phrase plays, it is reset to zero.
+
+   4.3.2 "elapsed (total)" shows the elapsed time in the project (not
+   including unused items) where zero is the start of the first used phrase
+   in the book.
+
+   4.3.3 "remaining" shows the remaining time in the current phrase. Every
+   time a new phrase plays, it is reset to the length of the phrase.
+
+   4.3.4 "remaining (total)" shows the remaining time in the project (not
+   including unused items.)
+
+  4.4 The transport bar has a text VU meter than can be captured by screen
+  readers (for instance.) The "left" and "right" boxes show the current
+  value of the input or output in the respective channel (only left shows a
+  value when playing monophonic sound.) When a channel overloads, the value
+  is "stuck" so that it can be seen that an overload occurred; the reset
+  button can be used to reset the value in both channels.
+
+  4.5 The record dialog
+
+  4.6 The graphical VU meter
+
+  4.7 The transport menu
+
 
 5 User settings and help
+
+  5.1 The current help file for Obi is badly out-of-date so this file
+  provides some more current info.
+
+  5.2 User settings provide default information for project metadata.
+  Initial values are obtained from the OS (user name and preferred language)
+  or defaulted (user organization.) These values can be changed through
+  Tools > User profile, or Alt+U, and persist on the user's file system.
+
+  5.3 Project preferences (Tools > Project preferences, or Alt+P) set
+  default paths for projects and the identifier template.
+
+    5.3.1 The identifier template is used to generate a project identifier
+    randomly when a new project is created. The character "#" in the
+    template is replaced by a digit (0 through 9), so for instance the
+    default template "obi_####" produces identifiers such as "obi_7483".
+
+    5.3.2 The default projects directory is the default location for
+    creating, opening and saving projects. All these operations allow the
+    user to change to a different directory.
+
+    5.3.3 The default export directory is the default location for
+    exporting projects to DAISY 3 books. This location can be changed while
+    exporting.
+
+    5.3.4 The "open last project when starting Obi" option causes Obi to
+    automatically open the last project that was open (if it can be found)
+    when Obi launches. It is unchecked by default.
+
+  5.4 Audio preferences (Tools > Audio preferences, or Alt+A) set preferred
+  audio devices for playing and recording, and default settings for
+  recording.
+
+    5.4.1 The input device is chosen from a list of available devices. If
+    the preferred device is not available (for instance an external device
+    which was unplugged) the first available one is chose.
+
+    5.4.2 The output device is chosen similarly.
+
+    5.4.3 The default sample rate is the one used when recording audio.
+
+    5.4.4 The default channels number (1 is mono, 2 is stereo) is the one
+    used when recording audio.
 
 
 6 Clipboard and undo/redo
 
+  6.1 The clipboard contains a single object (section, strip or block) at a
+  given time. It is the only object available for pasting. Cutting or copying
+  an object replaces the previous one in the clipboard. The previous is
+  object is restored when undoing the cut or copy operation.
 
-Appendix A - Missing features for version 1.0
+  6.2 Cut, copy and delete operations are available depending on the object
+  selected. Paste is available when an object is in the clipboard and the
+  right context is present, i.e. a block can be pasted only when a strip or
+  another block is selected (paste at the end of the strip or before the
+  selected block, respectively.)
+
+  6.3 The undo stack maintains the list of all modifications to the project
+  since the last time that it was saved. All operations in Obi can be
+  undone; undoing all operations revert the project to its unsaved state.
+
+  6.4 The redo stack maintains the list of all modifications to the project
+  that have been undone until a new operation is added to the undo stack.
+
+  6.5 Saving the project clears both undo and redo stacks. This has to do
+  with the way that audio data is committed to disk when saving the project;
+  in the future, there will be a separate audio clean-up operation that will
+  allow to keep the undo stack after saving (and possibly save it in the
+  project as well.)
+
+
+Appendix A - Missing features for version 1.0 (unsorted)
 
   A.1 Keyboard navigation in the strip manager.
 
@@ -209,11 +477,12 @@ Appendix A - Missing features for version 1.0
   removing page numbers lead to automatic renumbering.
 
   A.3 Go to page: select the phrase with the given page number, if it exists.
-  <LNN>A "Go to next page" function would also be nice to have.</LNN>
+  [NOTE: A "Go to next page" function would also be nice to have.]
 
   A.4 Cut/copy/paste text from annotation is not available.
-  <LNN> Sure it is, it interacts with the normal windows clipboard. Best guess 
-  is that it's a gift from the edit function being a text box widget?</LNN>
+  [NOTE: Actually it is, it interacts with the normal windows clipboard, as
+  implemented by the text box widget. A better integration with Obi's
+  clipboard is necessary though.]
 
   A.5 Search text: select a section whose title contains this text, or a phrase
   with an annotation containing this text. May move to post-0.9.
@@ -226,6 +495,22 @@ Appendix A - Missing features for version 1.0
   A.8 Unused item behavior may be too restrictive; maybe all operations should
   be allowed in unused sections and with unused audio blocks except that they
   won't be exported or played when the whole book plays.
-  <LNN>I agree, it should be possible to do most of the normal types of work 
-  on unused blocks. Otherwise, it is merely a "not really deleted yet" 
-  functionality, and that feels more like the domain of undo/redo to me</LNN>
+
+  A.9 The help file is badly outdated.
+
+  A.10 Exporting to DAISY makes you choose a folder, but the folder browser
+  dialog is really bad, so it will change to choosing a location for the
+  .opf file, just like creating a project asks for a location for the .xuk
+  file.
+
+  A.11 The transport bar buttons will be disabled when necessary, i.e. on
+  the first section the "previous section" button will be disabled but if
+  there is more than one section, the "next section" button will be enabled.
+
+  A.12 The time display will allow input to directly go to a selected time
+  in the book.
+
+
+Appendix B - Changelog
+
+This section will list all changes from version 0.8.0.0 on.
